# Poseidon-Blue

./: .clang-format  .gitignore  Poster_Draft.pptx  README.md
PCViewer/: app.py  data.py  global_.py  gui.py
application/: AWR1843config.cfg  Grouper.py  app.py  global_.py  grouper.py  old conf.cfg  readData_AWR1843.py  serial_interface.py  velocity.py  xwr18xx_profile_2022_06_02T12_58_52_155.cfg
application/Legacy/: app.py
base_dongle/: CMakeLists.txt  autobuild  bt.conf  console.conf  usb.conf
base_dongle/headers/: main.h
base_dongle/inc/: ble_base.h  main.h
base_dongle/source/: main.c
base_dongle/src/: ble_base.c  main.c  main.h
lib/src/: led_driver.c
mobile_node/: CMakeLists.txt  bt.conf  flash.sh  prj.conf
mobile_node/inc/: main.h  mobile_ble.h
mobile_node/src/: main.c  mobile_ble.c
